--- a/desafio-back/package.json
+++ b/desafio-back/package.json
@@ -10,6 +10,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@koa/cors": "^3.1.0",
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^8.2.0",
 		"jsonwebtoken": "^8.5.1",
